--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
-    <title>Confoo - Homepage</title>
+    <title>Staycon - Homepage</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta
       name="description"
-      content="Confoo 2024 Hotelier Conference"
+      content="Staycon 2024 Hotelier Conference"
     />
     <!-- favicon icon -->
     <link rel="shortcut icon" href="images/favicon.png" />
@@ -43,13 +43,13 @@
           <div class="col-auto col-lg-2 me-lg-0 me-auto">
             <a class="navbar-brand" href="index.html">
               <img
-                src="images/demo-conference-logo-white@2x.png   "
+                src="images/staycon-simple-logo.png   "
                 data-at2x="images/demo-conference-logo-white@2x.png"
                 alt=""
                 class="default-logo"
               />
               <img
-                src="images/demo-conference-logo-black@2x.png"
+                src="images/staycon-simple-logo.png"
                 data-at2x="images/demo-conference-logo-black@2x.png"
                 alt=""
                 class="alt-logo"
@@ -134,7 +134,7 @@
           >
             <span
               class="alt-font fs-225 lg-fs-190 md-fs-160 sm-fs-150 xs-fs-90 ls-minus-9px md-ls-minus-5px xs-ls-minus-2px fw-600 text-outline text-outline-width-2px d-inline-block"
-              data-fancy-text='{ "string": ["Confoo"], "duration": 500, "delay": 500, "speed": 50, "clipPath": ["inset(0 200px 0 0)", "inset(0px 0px 0px 0px)"], "easing": "easeOutCubic" }'
+              data-fancy-text='{ "string": ["Staycon"], "duration": 500, "delay": 500, "speed": 50, "clipPath": ["inset(0 200px 0 0)", "inset(0px 0px 0px 0px)"], "easing": "easeOutCubic" }'
             ></span>
             <span
               class="alt-font fs-160 md-fs-140 xs-fs-80 position-relative top-minus-40px lg-top-minus-20px xs-top-minus-5px ls-minus-10px md-minus-8px xs-ls-minus-3px text-white fw-600 text-shadow-double-large"
@@ -142,7 +142,7 @@
               >Conference</span
             >
             <a
-              href="demo-conference-registration.html"
+              href="registration.html"
               class="btn btn-extra-large btn-base-color btn-hover-animation btn-rounded btn-box-shadow align-self-center lg-mt-20px sm-mt-5px xs-mt-20px"
               data-anime='{ "opacity": [0, 1], "translateY": [50, 0], "easing": "easeOutCubic", "duration": 1000, "delay": 800 }'
             >
@@ -317,7 +317,7 @@
               <span
                 class="w-20px h-4px d-inline-block bg-base-color me-10px"
               ></span
-              >About Confoo
+              >About Staycon
             </h2>
             <!-- start features box item -->
             <div
@@ -339,7 +339,7 @@
                   >
                 </div>
                 <div class="mt-10px w-100">
-                  Embrace the opportunity to mingle with pioneers and peers in a day-long meetup designed to spark collaborative innovation and lasting partnerships. At Confoo 2024, each conversation could unveil new possibilities, each handshake could lead to a breakthrough, enabling you to weave a stronger network within the fabric of the hospitality industry.
+                  Embrace the opportunity to mingle with pioneers and peers in a day-long meetup designed to spark collaborative innovation and lasting partnerships. At Staycon 2024, each conversation could unveil new possibilities, each handshake could lead to a breakthrough, enabling you to weave a stronger network within the fabric of the hospitality industry.
 
 
                 </div>
@@ -361,7 +361,7 @@
                   >
                 </div>
                 <div class="mt-10px w-100">
-                  ‘Meet the Leader’ sessions at Confoo 2024 are your gateway to personal interactions with the stalwarts of hospitality. Gain direct insights from the experiences of seasoned hoteliers, ask your burning questions, and receive advice that’s tailored to the challenges you face in an ever-evolving industry landscape.
+                  ‘Meet the Leader’ sessions at Staycon 2024 are your gateway to personal interactions with the stalwarts of hospitality. Gain direct insights from the experiences of seasoned hoteliers, ask your burning questions, and receive advice that’s tailored to the challenges you face in an ever-evolving industry landscape.
 
 
                 </div>
@@ -410,7 +410,7 @@
             data-anime='{ "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'
           >
             <p>
-              Confoo 2024 brings together a panel of esteemed industry experts, each with a wealth of knowledge and experience in the hospitality sector. Prepare to deep-dive into discussions that will tackle today's challenges and uncover tomorrow's solutions for a thriving hotel business.
+              Staycon 2024 brings together a panel of esteemed industry experts, each with a wealth of knowledge and experience in the hospitality sector. Prepare to deep-dive into discussions that will tackle today's challenges and uncover tomorrow's solutions for a thriving hotel business.
 
 
             </p>
@@ -551,7 +551,7 @@
                 >Event schedule
               </h2>
               <p class="mb-35px lg-w-50 md-w-70 sm-w-100 mx-auto mx-xl-auto">
-                Discover Confoo's Timetable
+                Discover Staycon's Timetable
 
 
               </p>
@@ -705,7 +705,7 @@
               >Conference packages
             </h2>
             <p class="mb-35px md-w-80 sm-w-100 md-mx-auto">
-              Whether you’re looking to connect with industry leaders, dive deep into the trends reshaping hospitality, or simply find inspiration from fellow innovators, Confoo 2024 offers tailored packages to suit your professional needs. Choose from a range of options designed for optimal learning and networking opportunities in the heart of Lakeview City.
+              Whether you’re looking to connect with industry leaders, dive deep into the trends reshaping hospitality, or simply find inspiration from fellow innovators, Staycon 2024 offers tailored packages to suit your professional needs. Choose from a range of options designed for optimal learning and networking opportunities in the heart of Lakeview City.
 
 
             </p>
@@ -1148,8 +1148,7 @@
                     <i class="feather icon-feather-phone-call align-text-bottom icon-extra-medium text-base-color me-10px"></i>
                     Contact us
                 </span>
-                <a href="mailto:info@yourdomain.com">info@yourdomain.com</a><br />
-                <a href="tel:1800222000" class="mb-5px d-inline-block">1-800-222-000</a><br />
+                <a href="@">info@staycon.info</a><br />
                 <a href="#" class="text-decoration-line-bottom text-uppercase fs-15 alt-font fw-500">Call to event</a>
             </div>
             <!-- end footer column -->
