--- a/registration.html
+++ b/registration.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
-    <title>Confoo - Registration</title>
+    <title>Staycon - Registration</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta
       name="description"
-      content="Confoo 2024 Hotelier Conference - Registration."
+      content="Staycon 2024 Hotelier Conference - Registration."
     />
     <!-- favicon icon -->
     <link rel="shortcut icon" href="images/favicon.png" />
@@ -168,7 +168,7 @@
                   <i
                     class="line-icon-Geo2-Love icon-extra-large text-base-color mb-25px"
                   ></i>
-                  <div class="fs-20 text-white mb-5px">Join Us at Confoo 2024
+                  <div class="fs-20 text-white mb-5px">Join Us at Staycon 2024
                   </div>
                   <span class="w-60 lg-w-70 d-block m-auto"
                     >The Majestic Garden Hotel, Central Region, Lakeview City
@@ -427,8 +427,7 @@
                     <i class="feather icon-feather-phone-call align-text-bottom icon-extra-medium text-base-color me-10px"></i>
                     Contact us
                 </span>
-                <a href="mailto:info@yourdomain.com">info@yourdomain.com</a><br />
-                <a href="tel:1800222000" class="mb-5px d-inline-block">1-800-222-000</a><br />
+                <a href="mailto:info@yourdomain.com">info@staycon.info</a><br />
                 <a href="#" class="text-decoration-line-bottom text-uppercase fs-15 alt-font fw-500">Call to event</a>
             </div>
             <!-- end footer column -->
