--- a/schedule.html
+++ b/schedule.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
-    <title>Confoo - About</title>
+    <title>Staycon - About</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta
       name="description"
-      content="Confoo 2024 Hotelier Conference - Schedule"
+      content="Staycon 2024 Hotelier Conference - Schedule"
     />
     <!-- favicon icon -->
     <link rel="shortcut icon" href="images/favicon.png" />
@@ -43,19 +43,19 @@
           <div class="col-auto col-lg-2 me-lg-0 me-auto">
             <a class="navbar-brand" href="index.html">
               <img
-                src="images/demo-conference-logo-white@2x.png"
+                src="images/staycon-simple-logo.png"
                 data-at2x="images/demo-conference-logo-white@2x.png"
                 alt=""
                 class="default-logo"
               />
               <img
-                src="images/demo-conference-logo-black@2x.png"
+                src="images/staycon-simple-logo.png"
                 data-at2x="images/demo-conference-logo-black@2x.png"
                 alt=""
                 class="alt-logo"
               />
               <img
-                src="images/demo-conference-logo-black.png"
+                src="images/staycon-simple-logo.png"
                 data-at2x="images/demo-conference-logo-black@2x.png"
                 alt=""
                 class="mobile-logo"
@@ -461,8 +461,7 @@
                     <i class="feather icon-feather-phone-call align-text-bottom icon-extra-medium text-base-color me-10px"></i>
                     Contact us
                 </span>
-                <a href="mailto:info@yourdomain.com">info@yourdomain.com</a><br />
-                <a href="tel:1800222000" class="mb-5px d-inline-block">1-800-222-000</a><br />
+                <a href="#">info@staycon.info</a><br />
                 <a href="#" class="text-decoration-line-bottom text-uppercase fs-15 alt-font fw-500">Call to event</a>
             </div>
             <!-- end footer column -->
