--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           <div class="col-auto col-lg-2 me-lg-0 me-auto">
             <a class="navbar-brand" href="index.html">
               <img
-                src="images/staycon-simple-logo.png   "
-                data-at2x="images/demo-conference-logo-white@2x.png"
+                src="images/staycon-logo-white.png"
+                data-at2x="images/staycon-logo-white.png"
                 alt=""
                 class="default-logo"
               />
