--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                 class="default-logo"
               />
               <img
-                src="images/staycon-simple-logo.png"
-                data-at2x="images/demo-conference-logo-black@2x.png"
+                src="images/staycon-logo-red.png"
+                data-at2x="images/staycon-logo-red.png"
                 alt=""
                 class="alt-logo"
               />
               <img
-                src="images/demo-conference-logo-black.png"
-                data-at2x="images/demo-conference-logo-black@2x.png"
+                src="images/staycon-logo-red.png"
+                data-at2x="images/staycon-logo-red.png"
                 alt=""
                 class="mobile-logo"
               />
