--- a/schedule.html
+++ b/schedule.html
@@ -43,20 +43,20 @@
           <div class="col-auto col-lg-2 me-lg-0 me-auto">
             <a class="navbar-brand" href="index.html">
               <img
-                src="images/staycon-simple-logo.png"
-                data-at2x="images/demo-conference-logo-white@2x.png"
+                src="images/staycon-logo-white.png"
+                data-at2x="images/staycon-logo-white.png"
                 alt=""
                 class="default-logo"
               />
               <img
-                src="images/staycon-simple-logo.png"
-                data-at2x="images/demo-conference-logo-black@2x.png"
+                src="images/staycon-logo-red.png"
+                data-at2x="images/staycon-logo-red.png"
                 alt=""
                 class="alt-logo"
               />
               <img
-                src="images/staycon-simple-logo.png"
-                data-at2x="images/demo-conference-logo-black@2x.png"
+                src="images/staycon-logo-red.png"
+                data-at2x="images/staycon-logo-red.png"
                 alt=""
                 class="mobile-logo"
               />
